kops/ingress/spinnaker-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chaosgears-deck
  labels:
    name: chaosgears-deck
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: deck
  - name: deck-port
    port: 9000
    protocol: TCP
    targetPort: deck
  selector:
    app: chaosgears-spinnaker
    component: deck
  #sessionAffinity: None
  #type: LoadBalancer
